--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>We are the 4Binf</title>
 </head>
 <body>
-    Ciao sono youtubo anche io e oggi mangeremo 90 polli rinforzanti
+    <h1>Eventi Libreria</h1>
+    Benvenuti nella lista eventi della libreria
 </body>
 </html>
